refactor: remove task
1.0.4
