# router/router.go
@@ -29,16 +29,6 @@ func init() {
 			})
 			websocket.M.HandleMessage(api.PageOnMessage)
 
-			group.Group("/task", func(group *ghttp.RouterGroup) {
-				group.GET("/", api.Task.ReadAll)
-				group.GET("/{id}", api.Task.ReadOne)
-				group.Middleware(middleware.JWTLogin, middleware.NeedRole("admin"))
-				group.POST("/", api.Task.Create)
-				group.DELETE("/{id}", api.Task.Delete)
-				group.PUT("/{id}", api.Task.Update)
-				group.PATCH("/{id}", api.Task.Update)
-			})
-
 			// crud_gen will insert here
 		})
 	})
